# transit-radar

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile.toml  README.md  TODO  VBB_Colours.csv  deployment.yaml  nightly-reload.yaml  responsive-query.drawio  run-alpha.sh  run.sh  seed stack.drawio  seed-model.drawio  service-alpha.sh  shell.nix  transit-radar-alpha.conf  transit-radar-arch.drawio  transit-radar.conf  transit-radar.yaml  update-timetables.sh
backend/: Cargo.toml
backend/src/: gtfs.rs  journey_graph.rs  main.rs
backend/src/gtfs/: db.rs  gtfstime.rs  mod.rs
frontend/: Cargo.toml  index.html  index.js  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  Radar.css  Radar.js
frontend/src/stories/: 2-RadarTrips.stories.js  3-Curve.stories.js  alex-data.json  ostbahnhof-data.json  volta-data.json
log/: log.md
ops/: init.dockerfile  init.sh  run.sh  service.sh  update-gtfs.sh  update-timetables.sh
ops/sites/: radar.njk.onl.conf  transit-radar-alpha.conf  transit-radar.conf
radar-search/: Cargo.toml
radar-search/src/: journey_graph.rs  lib.rs  naive_sync.rs  search_data.rs  search_data_sync.rs  time.rs
seed-frontend/: Cargo.toml  Makefile.toml  index.html  pres.html  storybook.html
seed-frontend/src/: autocomplete.rs  canvasser.rs  controls.rs  lib.rs  radar.rs  scheduler.rs  sync.rs
seed-frontend/src/canvasser/: animate.rs  cmd_manager.rs  draw.rs  effects.rs  orders.rs  scheduler.rs  util.rs
seed-frontend/src/canvasser/orders/: container.rs  proxy.rs
seed-frontend/src/radar/: draw.rs
seed-frontend/static/: pres.css  style.css
seed-quickstart/: Cargo.toml  index.html
seed-quickstart/src/: lib.rs
src/: arena.rs  journey_graph.rs  lib.rs  main.rs  search_data.rs  suggester.rs
src/draw/: Radar.css  geometry.rs  mod.rs  radar.rs  xml.rs
src/gtfs/: db.rs  gtfstime.rs  mod.rs  model.rs  time.rs
src/gtfs/model/: enums.rs  id.rs
