[package]
name = "transit-radar"
version = "0.1.0"
authors = ["Mike Bush <platy@njk.onl>"]
edition = "2018"
default-run = "webserver"

[workspace]
exclude = ["./seed-frontend"]

[lib]
name = "transit_radar"

[dependencies]
radar-search = { path = "./radar-search" }
csv = "1.1"
serde = { version = "1", features = ["derive"] }
rmp-serde = "0.14.3"
geo = "0.13.0"
serde_json = "1.0.48"
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
urlencoding = "1.0.0"
futures = "0.3.0"
tst = "0.10.*"
chrono = "0.4"
chrono-tz = "0.5"
serde_test = "1.0.106"
