[package]
name = "transit-radar"
version = "0.7.2"
authors = ["Mike Bush <platy@njk.onl>"]
edition = "2018"
default-run = "webserver_svg"

[workspace]
exclude = ["./seed-frontend"]

[lib]
name = "transit_radar"

[dependencies]
radar-search = { path = "./radar-search" }
csv = "1.1"
geo = "0.19"
chrono = "0.4"
chrono-tz = "0.6"
regex = "1.5"

serde = { version = "1", features = ["derive"] }
serde_test = "1.0.106"
warp = "0.2"
urlencoding = "1.0.0"
tst = "0.10.*"
lazysort = "0.2.1"

rocket = "0.5.0-rc.1"

dhat = { version = "0.3", optional = true }

[features]
dhat-heap = ["dhat"]

[profile.release]
debug = 1
