[package]
name = "radar-search"
version = "0.1.0"
authors = ["Mike Bush <platy@njk.onl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geo = { version = "0.13.0", features = ["use-serde"] }
serde = { version = "1", features = ["derive"] }
